<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">InventoryApp</string>

    <string name="db_info">Database Info</string>

    <!-- List item string resources -->
    <string name="tools_text_product_name">Product name</string>
    <string name="tools_text_product_price">Price €<xliff:g example="125" id="product_price">%d</xliff:g></string>
    <string name="text_button_sale">Sale</string>
    <string name="tools_text_product_quantity">Quantity <xliff:g example="144" id="product_quantity">%d</xliff:g></string>

    <!-- Title text for the empty view [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">Your store is still empty.\n\nFill in all product and supplier details\nto add a new item.</string>

    <!-- Menu editor -->
    <string name="menu_editor_action_save">Save</string>
    <string name="menu_editor_action_delete">Delete</string>
    <string name="menu_editor_action_order">Order</string>

    <!-- DB transaction responses -->
    <string name="sale_success">Sold!</string>
    <string name="sale_failure">Sale did not succeed</string>
    <string name="sale_not_in_stock">Not in stock</string>

    <string name="category_product_name">Product name</string>
    <string name="hint_product_name">Name</string>
    <string name="category_product_price">Product price</string>
    <string name="hint_product_price">Price (€)</string>
    <string name="category_product_quantity">Product quantity</string>
    <string name="hint_product_quantity">Quantity</string>

    <string name="category_supplier_name">Supplier name</string>
    <string name="hint_supplier_name">Name</string>
    <string name="category_supplier_phone">Supplier phone</string>
    <string name="hint_supplier_phone_number">Phone Number</string>

    <string name="activity_detail_title_new_product">Add</string>
    <string name="activity_detail_title_edit_product">Edit</string>

    <string name="detail_save_product_success">Product successfully saved</string>
    <string name="detail_save_product_failure">Error while saving the product</string>
    <string name="detail_delete_product_success">Product successfully deleted</string>
    <string name="detail_delete_product_failure">Error while deleting the product</string>

    <string name="detail_change_quantity_product_failure">Error while changing the quantity of the product</string>
    <string name="detail_change_quantity_product_success">Quantity updated successfully</string>
    <string name="detail_change_quantity_product_no_negative">Cannot insert negative quantity</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current product [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <string name="confirm_deletion">Delete product?</string>
    <string name="delete">Delete</string>
    <string name="return_back">Return Back</string>

    <!-- String to notify the user there is no permission to call -->
    <string name="permission_denied">Permission Denied</string>

    <string name="increase">Increase</string>
    <string name="decrease">Decrease</string>

</resources>
