<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_detail_margin"
    tools:context=".DetailActivity">

    <!-- Product name -->
    <LinearLayout style="@style/DetailLinearLayoutStyle">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_product_name" />

        <EditText
            android:id="@+id/edit_product_name"
            style="@style/EditorFieldStyle"
            android:hint="@string/hint_product_name"
            android:inputType="textCapWords" />
    </LinearLayout>

    <!-- Product price -->
    <LinearLayout style="@style/DetailLinearLayoutStyle">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_product_price" />

        <EditText
            android:id="@+id/edit_product_price"
            style="@style/EditorFieldStyle"
            android:hint="@string/hint_product_price"
            android:inputType="number" />
    </LinearLayout>

    <!-- Product quantity -->
    <LinearLayout style="@style/DetailLinearLayoutStyle">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_product_quantity" />

        <EditText
            android:id="@+id/edit_product_quantity"
            style="@style/EditorFieldStyle"
            android:hint="@string/hint_product_quantity"
            android:inputType="number" />

    </LinearLayout>

    <!-- Supplier name -->
    <LinearLayout style="@style/DetailLinearLayoutStyle">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_supplier_name" />

        <EditText
            android:id="@+id/edit_supplier_name"
            style="@style/EditorFieldStyle"
            android:hint="@string/hint_supplier_name"
            android:inputType="textCapWords" />
    </LinearLayout>

    <!-- Supplier phone number -->
    <LinearLayout style="@style/DetailLinearLayoutStyle">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_supplier_phone" />

        <EditText
            android:id="@+id/edit_supplier_phone_number"
            style="@style/EditorFieldStyle"
            android:hint="@string/hint_supplier_phone_number"
            android:inputType="phone" />
    </LinearLayout>

    <!-- Quantity button -->
    <LinearLayout style="@style/DetailLinearLayoutStyle">

        <Button
            android:id="@+id/button_increase"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_weight="1"
            android:text="Increase" />

        <Button
            android:id="@+id/button_decrease"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_weight="1"
            android:text="Decrease" />
    </LinearLayout>

</LinearLayout>
